--- a/finalTest/CSS/contents.css
+++ b/finalTest/CSS/contents.css
@@ -12,3 +12,23 @@
     normalize.css를 검색하여 적용시킨다.(디폴트 값을 초기화 시키는게 아니라 같은값으로 설정해준다.)
 */
 @import "reset.css";
+@import "top-bar.css";
+@import "header.css";
+/* google fonts 에서 원하는 글꼴을 가져올 수 있다. */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
+
+body {
+  background-color: white;
+  /* 검은색은 그냥 black를 사용하는것 보다 약간 검은색을 쓰는것이 더 좋다. 다른사이트의 검은색을 참고하자  */
+  color: #282829;
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+a {
+  /* 
+    inherit은 부모요소로 부터 색을 받아오는것을 뜻한다.
+    a태그의 설정을 이렇게 해주면 visited도 바뀐다.
+  */
+  color: inherit;
+}
