--- a/finalTest/CSS/top-bar.css
+++ b/finalTest/CSS/top-bar.css
@@ -2,12 +2,15 @@ div.top-bar {
   background-color: #cccccc;
   display: flex;
   justify-content: space-between;
-  padding: 7px 30px;
+  padding: 7px 20px;
   margin-bottom: 20px;
   color: #f2f2f2;
   opacity: 0.8;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
-
 div.top-bar i {
   font-size: 17px;
 }
