--- a/finalTest/CSS/contents.css
+++ b/finalTest/CSS/contents.css
@@ -15,6 +15,7 @@
 @import "top-bar.css";
 @import "header.css";
 @import "nav-bar.css";
+@import "push.css";
 /* google fonts 에서 원하는 글꼴을 가져올 수 있다. */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
 /* 
