--- a/finalTest/CSS/nav-bar.css
+++ b/finalTest/CSS/nav-bar.css
@@ -17,7 +17,7 @@ nav.menu > ul.menu_list > li.menu_list_item {
   color: #5e5e5e;
 }
 .active > a > i {
-  color: rgb(119, 65, 168);
+  color: turquoise;
 }
 
 nav.menu > ul.menu_list > li.menu_list_item > a.menu_list_item_link {
@@ -30,7 +30,7 @@ a.menu_list_item_link > div.push-count {
   top: -14px;
   right: -14px;
   color: white;
-  background-color: rgb(119, 65, 168);
+  background-color: turquoise;
   width: 33px;
   height: 27px;
   border-radius: 20px;
