--- a/finalTest/CSS/myPage.css
+++ b/finalTest/CSS/myPage.css
@@ -13,16 +13,52 @@
   font-size: 19px;
 }
 .lately-vod .lately-vod_column .lately-vod_thumbnail {
-  width: 200px;
-  height: 150px;
+  width: 100%;
+  height: 100px;
 }
 
 .myPage_main-header .lately-vods_list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
 .myPage_main-header .lately-vods_list .lately-vod_column {
   display: flex;
+  width: 200px;
+  margin-top: 15px;
+}
+.myPage_main-header
+  .lately-vods_list
+  .lately-vod_column
+  .lately-vod_content
+  .vod_title {
+  display: block;
+  margin-right: 10px;
+  font-weight: 600;
+}
+
+.myPage_main-header .lately-vods_list .lately-vod_column .lately-vod_content i {
+  opacity: 0.5;
+}
+
+ul.myPage_list {
+  margin-left: 38px;
+  margin-top: 30px;
+}
+
+ul.myPage_list li.myPage_item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 37px;
+}
+
+ul.myPage_list li.myPage_item i {
+  opacity: 0.5;
+  margin-right: 33px;
+}
+
+ul.myPage_list li.myPage_item span {
+  font-weight: 600;
+  font-size: 18px;
 }
